<resources>
    <string name="app_name">Big Event Countdown</string>
    <string name="welcomeText">Hi! Welcome To Event Countdown!</string>
    <string name="add_Delete_EventText">Add/Delete Event</string>
    <string name="add">Add</string>
    <string name="event_id">id</string>
    <string name="event_name">Event Name</string>
    <string name="event_date">Event Date</string>
    <string name="event_countdown">Countdown</string>
    <string name="delete">Delete</string>
    <string name="AddAndDeleteNotification">Enter Event Name to Add An Event. Enter Event ID Below To Delete An Event.</string>
    <string name="returnToMain">Return</string>
    <string name="enterEventName">Enter Event Name</string>
    <string name="enterEventId">Enter Event Id To Delete</string>
    <string name="selectDate">Select A Date</string>
    <string name="enterDateFirst">Please Enter Date First.</string>
    <string name="enterEventDetail">Please Enter Event Detail(optional)</string>
    <string name="emptyEventText">You currently don\'t have any event yet. Please click the button below to add.</string>
</resources>

