<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightPrimary"
    tools:context=".AddEvent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginTop="80dp"
        android:text="@string/add_Delete_EventText"
        android:textColor="@color/colorPrimaryText"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="138dp"
        android:layout_height="64dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginBottom="144dp"
        android:onClick="btnConfirmAddOnClick"
        android:text="@string/add"
        android:textColor="@color/colorPrimaryText"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="138dp"
        android:layout_height="64dp"
        android:onClick="btnDeleteOnClick"
        android:text="@string/delete"
        android:textColor="@color/colorPrimaryText"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toEndOf="@+id/btnAdd"
        app:layout_constraintTop_toTopOf="@+id/btnAdd" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="138dp"
        android:layout_height="64dp"
        android:layout_marginEnd="136dp"
        android:layout_marginRight="136dp"
        android:layout_marginBottom="48dp"
        android:onClick="btnCancelAddOnClick"
        android:text="@string/returnToMain"
        android:textColor="@color/colorPrimaryText"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSelectDate"
        android:layout_width="190dp"
        android:layout_height="55dp"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginEnd="112dp"
        android:layout_marginRight="112dp"
        android:layout_marginBottom="520dp"
        android:onClick="btnSelectDateOnClick"
        android:text="@string/selectDate"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvShowDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="160dp"
        android:gravity="center_horizontal"
        android:text="@string/AddAndDeleteNotification"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSelectDate"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etEventName"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:layout_marginBottom="352dp"
        android:autoText="false"
        android:ems="10"
        android:gravity="bottom|center_horizontal"
        android:hint="@string/enterEventName"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etEventId"
        android:layout_width="301dp"
        android:layout_height="58dp"
        android:layout_marginBottom="268dp"
        android:autoText="false"
        android:ems="10"
        android:gravity="bottom|center_horizontal"
        android:hint="@string/enterEventId"
        android:inputType="number"
        android:textColor="@color/colorPrimaryText"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="404dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>